PostGIS 2.3.11
XXXX/XX/XX

  * Bug Fixes and Enhancements *

  - #4475, Avoid reading into empty ptarray (Paul Ramsey)
  - #4518, Fix geometry_columns and raster views 
          to not use pg_constraints.consrc which was removed in PG 12 (Regina Obe)
  - #4492, Fix ST_Simplify ignoring the value of the 3rd parameter (Raúl Marín)
  - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)
  - #4493, Fix ST_RemoveRepeatedPoints output having an outdated bbox (Raúl Marín)
  - #4495, Fix ST_SnapToGrid output having an outdated bbox (Raúl Marín)
  - #4498, Restrict build for PgSQL > 9.6
  - #4519, Fix getSRIDbySRS crash (Raúl Marín)
  - #4534, Fix leak in lwcurvepoly_from_wkb_state (Raúl Marín)
  - #4536, Fix leak in lwcollection_from_wkb_state (Raúl Marín)
  - #4537, Fix leak in WKT collection parser (Raúl Marín)
  - #4547, Fix AddRasterConstraints handling of empty tables (Sandro Santilli)
  - #4549, Fix schema qualification of internal types (Raúl Marín)
  - #4546, Fix PLPGSQL functions missing the schema qualification (Raúl Marín)
  - #4621, Prevent stack overflow when parsing WKB (Raúl Marín)

PostGIS 2.3.10
2019/08/11

  * Bug Fixes and Enhancements *

  - #4361, Fix postgis_type_name with (GEOMETRYM,3) (Matt Bretl)
  - #4326, Fix circular arc distance calculation (Paul Ramsey)
  - #4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)
  - #4327, Avoid pfree'ing the result of getenv (Raúl Marín)
  - #4406, Throw on invalid characters when decoding geohash (Raúl Marín)
  - #4466, Fix undefined behaviour in _postgis_gserialized_stats (Raúl Marín)
  - #4209, Handle NULL geometry values in pgsql2shp (Paul Ramsey)
  - #4437, Handle POINT EMPTY in shape loader/dumper (Paul Ramsey)
  - #4470, ST_GeomFromGeoJSON crash on empty rings (Darafei Praliaskouski)

PostGIS 2.3.9
2019/03/11

  * Bug Fixes and Enhancements *

  - #4139, Make mixed-dimension ND index build tree correctly.