@@ -4,7 +4,7 @@ XXXX/XX/XX
   * Bug Fixes and Enhancements *
 
   - #4475, Avoid reading into empty ptarray (Paul Ramsey)
-  - #4518, Fix geometry_columns and raster views 
+  - #4518, Fix geometry_columns and raster views
           to not use pg_constraints.consrc which was removed in PG 12 (Regina Obe)
   - #4492, Fix ST_Simplify ignoring the value of the 3rd parameter (Raúl Marín)
   - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)
@@ -19,6 +19,7 @@ XXXX/XX/XX
   - #4549, Fix schema qualification of internal types (Raúl Marín)
   - #4546, Fix PLPGSQL functions missing the schema qualification (Raúl Marín)
   - #4621, Prevent stack overflow when parsing WKB (Raúl Marín)
+  - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
 
 PostGIS 2.3.10
 2019/08/11
